--- a/index.html
+++ b/index.html
@@ -29,8 +29,32 @@
             <div class="portrait animated zoomIn">
                 <img src="./images/portrait.jpg" />
             </div>
-           <p><span class="important">Hello! My name's Julien and I'm a Web Developer in London.</span>
-           I can help you to bring a web project to life. I work using a modern stack and prefer Agile environments. You can find me at some Tech meetups. </p>
+            <div class="container">
+    <div class="row row-centered">
+        <div class="col-md-3 col-centered"><p class="introt"><i class="fa fa-briefcase"></i> &nbsp; Web Developer</p></div>
+        <div class="col-md-3 col-centered"><p class="introt"><i class="fa fa-map-marker"></i>&nbsp; London, UK</p></div>
+    </div>
+</div>
+                                   
+
+        </div>
+
+        <div class="row">
+            <div class="split3 col-md-4"><h2><i class="fa fa-code"></i> &nbsp; Stack</h2>
+            <p>I'm a full-stack developer and up-to-date with current trends and technologies.</p>
+            <ul>
+                <li>Foundation, Bootstrap</li>
+                <li>jQuery, <span class="important">Angular</span>, Ember</li>
+                <li>NodeJS, SocketIO</li>
+                <li><span class="important">Python</span> + Flask/Django</li>
+            </ul>
+            </div>
+            <div class="split3 col-md-4"><h2><i class="fa fa-gear"></i> &nbsp; Principles</h2>
+            <p>I believe programs can help to make the world better place. I give some of my time to <a target="_blank" href="https://github.com/julienbrunuk?tab=activity">open-source projects</a> and during hackathons. I prefer to work in agile environments, with continuous integration.</p>            <p>I use automation tools such as <span class="important">Grunt, Yo, and Travis (CI)</span></p>
+
+            </div>
+            <div class="split3 col-md-4"><h2><i class="fa fa-heart"></i> &nbsp; Human</h2>
+            <p>Originally from France, you can find me running along the Thames and at some tech meetups.</p><p>I'm also baking a pixel-art application with a friend. You can <a target="_blank" href="http://256px.io/">register your interest</a> for 256px.io</p></div>
         </div>
 
     </div>
