--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Julien Brun</h1>
 
             <div class="portrait animated zoomIn">
-                <img src="./images/portrait.jpg" />
+                <img src="https://avatars2.githubusercontent.com/u/5961441?v=3&s=460" />
             </div>
             <div class="container">
     <div class="row row-centered">
