--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <canvas id="spider"></canvas>
     <div class="container welcomewrapper">
         <div class="row welcome">
             
@@ -72,6 +73,7 @@
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="./js/superfancyeffect.js"></script>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
