--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <canvas id="spider"></canvas>
+    <canvas id="spiders"></canvas>
     <div class="container welcomewrapper">
         <div class="row welcome">
             
