--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>Julien Brun</h1>
 
             <div class="portrait animated zoomIn">
-                <img src="https://avatars2.githubusercontent.com/u/5961441?v=3&s=460" alt="Julien Brun"/>
+                <img src="https://avatars2.githubusercontent.com/u/5961441" alt="Julien Brun"/>
             </div>
             <div class="container">
     <div class="row row-centered">
